# registry

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  lefthook.yml  main.py  mise.toml  pyproject.toml  repos.json  repos_test.json
.github/workflows/: update-registry.yml
src/: generate.py
templates/: README.md.j2  index.html.j2
